# CONNECT-SocialNetwork

./: ..txt  .env  LICENSE  README.md  ReadMe-dev.md  TODO.md  docker-compose.yml  lambda.js
backend/: .env  .gitignore  Dockerfile  ReadMe-dev.md  auth_tests.py  database_tests.py  endpoint_tests.py  main.py  mix_posts_consts.py  project_types.py  pyproject.toml  rate_limiter.py  requirements.txt  services_types.py  validation_utils.py
backend/authorization/: __init__.py  authorization_utils.py  jwt_service.py  password_utils.py
backend/exceptions/: custom_exceptions.py  exceptions_handler.py
backend/post_popularity_rate_task/: popularity_rate.py
backend/pydantic_schemas/: pydantic_schemas_auth.py  pydantic_schemas_chat.py  pydantic_schemas_social.py
backend/routes/: __init__.py  auth_router.py  media_router.py  query_utils.py  social_router.py
backend/services/: __init__.py
backend/services/chromaDB_service/: __init__.py  service.py
backend/services/core_services/: __init__.py  core_services.py
backend/services/core_services/main_services/: __init__.py  main_auth_service.py  main_chat_service.py  main_media_service.py  main_social_service.py
backend/services/email_service/: __init__.py  emai_service.py  email_service.py
backend/services/image_storage_service/: services.py
backend/services/postgres_service/: __init__.py  database.py  database_utils.py  models.py  postgres_service.py
backend/services/redis_service/: service.py
backend/websockets_chat/: chat.py  connection_manager.py
frontend/: Dockerfile  package-lock.json  package.json  (+1 more)
(+91 files in other folders)
