[project]
name = "CONNECT-backend"
authors = [{name = "Romanov Yehor", email = "yeghor.romanov@gmail.com"}]
description = "Backend part of CONNECT social network application"
keywords = [
    "fastapi",
    "SQLAlchemy",
    "async",
    "backend",
    "social-network",
]
requires-python = ">= 3.10"
version = "1.0"
dependencies = [
    "fastapi==0.115.11",
    "bcrypt==4.0.1",
    "pydantic==2.11.5",
    "SQLAlchemy==2.0.41",
    "python-dotenv==1.2.2",
    "slowapi==0.1.9"
    "uvicorn==0.34.0",
    "pyjwt==2.9.0",
    "redis==5.3.0",
    "asyncpg==0.30.0",
    "chromadb==1.0.15",
    "asgiref==3.8.1",
    "apscheduler==3.11.0",
    "python-magic==0.4.27",
    "aiofiles==24.1.0",
    "aiobotocore==2.23.2",
    "python-multipart==0.0.20",
    "libmagic==1.0",
    "protobuf==3.20.0",
    "aiosmtplib==5.1.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest==8.3.5",
    "pytest-asyncio==1.0.0",
]

[tool.black]
target-version = ["py310", "py311", "py312"]

[project.urls]
Repository = "https://github.com/yeghor/CONNECT-SocialNetwork.git"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

# https://github.com/pypa/setuptools/issues/3197#issuecomment-1078770109
# Required for disabling packages auto-discovery
[tool.setuptools]
py-modules = []